# sudoku-workspace

./: .gitignore  ACKNOWLEDGMENTS.md  Cargo.toml  Justfile  LICENSE  README.md  plan-curried-rolling-boole.md  plan-sunny-juggling-snowflake.md
.github/workflows/: build-ios.yml  ci.yml  trigger-blog.yaml  trigger-blog.yml
crates/sudoku-core/: Cargo.toml  README.md
crates/sudoku-core/src/: constraint.rs  generator.rs  grid.rs  lib.rs  solver.rs
crates/sudoku-core/src/solver/: aic_engine.rs  als_engine.rs  explain.rs  fabric.rs  fish_engine.rs  mod.rs  types.rs  uniqueness.rs
crates/sudoku-ffi/: Cargo.toml  uniffi.toml
crates/sudoku-ffi/src/: lib.rs
crates/sudoku-tui/: Cargo.toml
crates/sudoku-tui/src/: app.rs  game.rs  leaderboard.rs  main.rs  render.rs  stats.rs  theme.rs
crates/sudoku-tui/src/animations/: celebrations.rs  lose_screen.rs  mod.rs  particles.rs  win_screen.rs
crates/sudoku-wasm/: Cargo.toml
crates/sudoku-wasm/src/: animations.rs  game.rs  lib.rs  render.rs  tests.rs  theme.rs
crates/sudoku-wasm/www/: index.html  serve.py
crates/sudoku-wasm/www/pkg/: package.json  sudoku_wasm.d.ts  sudoku_wasm.js  sudoku_wasm_bg.wasm  sudoku_wasm_bg.wasm.d.ts
docs/: ios-publishing.md  privacy.md
examples/: README.md  basic.rs
ios/: .gitignore  README.md  build.sh
ios/Sudoku/: project.yml
ios/Sudoku/Sudoku/: Info.plist  PrivacyInfo.xcprivacy  Sudoku.entitlements  SudokuApp.swift
ios/Sudoku/Sudoku.xcodeproj/: project.pbxproj
ios/Sudoku/Sudoku.xcodeproj/xcshareddata/xcschemes/: Sudoku.xcscheme  SudokuScreenshots.xcscheme
ios/Sudoku/Sudoku/Models/: GameHistory.swift  GameModels.swift
ios/Sudoku/Sudoku/Services/: GameCenterManager.swift  GameHistoryManager.swift  GameManager.swift  PuzzleAPIService.swift  PuzzleCache.swift  PuzzleOCRService.swift
ios/Sudoku/Sudoku/ViewModels/: GameViewModel.swift  PuzzleConfirmationViewModel.swift
ios/Sudoku/Sudoku/Views/: CameraCaptureView.swift  CellView.swift  ConfirmationGridView.swift  ContentView.swift  GameHistoryView.swift  GameView.swift  GridView.swift  LoseScreenView.swift  NumberPadView.swift  PuzzleConfirmationView.swift  QRCodeView.swift  QRScannerView.swift  SERatingPickerView.swift  SettingsView.swift  StatsView.swift  UnifiedImportView.swift  WinScreenView.swift
ios/Sudoku/SudokuTests/: SudokuTests.swift
ios/Sudoku/SudokuUITests/: ConsolidatedMenuTests.swift  Info.plist  ScreenshotTests.swift
ios/Sudoku/fastlane/: Appfile  Fastfile
ios/scripts/: capture_screenshots.sh  quick_screenshots.sh  resize_screenshots.sh
tests/: test_celebration_final.py  test_celebrations.py  test_celebrations_debug.py  test_game_interaction.py  test_sudoku_final.py
(+1 files in other folders)
