[workspace]
resolver = "2"
members = [
    "crates/sudoku-ffi",
    "crates/sudoku-tui",
    "crates/sudoku-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
sudoku-core = { git = "https://github.com/kcirtapfromspace/sudoku-core.git", tag = "v0.1.1" }
