[package]
name = "sudoku-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UniFFI bindings for Sudoku engine"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
sudoku-core = { path = "../sudoku-core" }
uniffi = { version = "0.28", features = ["cli"] }
serde_json = "1"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
